--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.1.5"
+    "@astrojs/react": "^1.1.1",
+    "astro": "^1.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
